# Projects

Object Detection & Depth Estimation/LaneKeepingSystem/: CMakeLists.txt
Object Detection & Depth Estimation/LaneKeepingSystem/config/: config.yaml
Object Detection & Depth Estimation/LaneKeepingSystem/include/LaneKeepingSystem/: HoughTransformLaneDetector.hpp  LaneKeepingSystem.hpp  LiDARDetector.hpp  PIDController.hpp  TSTLDetector.hpp  XycarController.hpp
Object Detection & Depth Estimation/LaneKeepingSystem/launch/: drive.launch  drive_bag.launch
Object Detection & Depth Estimation/LaneKeepingSystem/src/: main.cpp
Object Detection & Depth Estimation/LaneKeepingSystem/src/LaneKeepingSystem/: HoughTransformLaneDetector.cpp  LaneKeepingSystem.cpp  LiDARDetector.cpp  PIDController.cpp  TSTLDetector.cpp  XycarController.cpp
Object Detection & Depth Estimation/data_collect/: CMakeLists.txt  calibration_result.txt  calibration_result2.txt  package.xml
Object Detection & Depth Estimation/data_collect/launch/: collect.launch
Object Detection & Depth Estimation/data_collect/src/: collect.py
Object Detection & Depth Estimation/yolov3_onnx_rt/: labels.txt  onnx_to_tensorrt.py  requirements.txt  yolov3-tiny_tstl_352.cfg  yolov3-tiny_tstl_416.cfg  yolov3_to_onnx.py
Object Detection & Depth Estimation/yolov3_trt_ros/: CMakeLists.txt  package.xml
Object Detection & Depth Estimation/yolov3_trt_ros/launch/: yolov3_trt_ros.launch
Object Detection & Depth Estimation/yolov3_trt_ros/src/: common.py  data_processing.py  trt_detection.py  yolov3_to_onnx.py
